--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Icarus - AI Developer & Engineering Student Portfolio</title>
+    <title>Harshit - AI Developer & Engineering Student Portfolio</title>
     <meta
       name="description"
-      content="Icarus - Computer Science Engineering student specializing in AI. Passionate about building intelligent systems, interactive applications, and science education."
+      content="Harshit - Computer Science Engineering student specializing in AI. Passionate about building intelligent systems, interactive applications, and science education."
     />
-    <meta name="author" content="Icarus" />
+    <meta name="author" content="Harshit" />
     <meta
       name="keywords"
       content="AI Developer, Software Engineer, Computer Science, Portfolio, React, TensorFlow, Machine Learning"
@@ -37,11 +37,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Icarus - AI Developer & Engineering Student Portfolio"
+      content="Harshit - AI Developer & Engineering Student Portfolio"
     />
     <meta
       name="twitter:description"
-      content="Explore the portfolio of Icarus, a Computer Science Engineering student specializing in AI."
+      content="Explore the portfolio of Harshit, a Computer Science Engineering student specializing in AI."
     />
     <meta
       name="twitter:image"
